[package]
name = "search-sort"
version = "0.3.0"
authors = ["piernczk <piernczk@users.noreply.github.com>"]
edition = "2018"

description = "Implementation of few searching and sorting algorithms"
readme = "README.md"
repository = "https://github.com/piernczk/search-sort-rs"
license = "MIT"
keywords = ["search", "sort", "utility", "algorithm"]
categories = ["algorithms"]

[dependencies]
